tests/palaiologos/fail/integer_bounds/2^32/rep_drop.asm
rep drop 100000000h
